tests/fail/sayı-çekim.kip
(bu tam-sayıdan) (şu tam-sayıya) (sayı-çekim tam-sayısı),
  5'ten 10'a sayı-çek.
